--- a/src/app/checkout/styles.css
+++ b/src/app/checkout/styles.css
@@ -1,7 +1,6 @@
 .inputCheckout {
-  @apply rounded bg-base-input p-3 border border-base-button outline-yellow-dark
+  @apply rounded bg-base-input p-3 border border-base-button focus:border-yellow-dark outline-none
 }
-
 .inputTextPlaceholder {
   @apply placeholder:font-normal placeholder:text-sm placeholder:leading-tight placeholder:text-base-label font-normal text-sm leading-tight text-base-text
 }
